--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ if(NOT MODE)
     set(MODE File)
 endif()
 
-add_library(MATRIX_MATH STATIC MatrixMath.cpp MatrixMath.h )
-add_library(MATRIX${MODE}PRINT STATIC Matrix${MODE}Print.cpp Matrix${MODE}Print.h PrintTo.cpp PrintTo.h)
+add_library(MATRIX_MATH SHARED MatrixMath.cpp MatrixMath.h )
+add_library(MATRIX${MODE}PRINT SHARED Matrix${MODE}Print.cpp Matrix${MODE}Print.h PrintTo.cpp PrintTo.h)
 add_executable(MAIN main.cpp)
 target_link_libraries(MAIN MATRIX_MATH MATRIX${MODE}PRINT)
 
